--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
         <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
       </figure>
     <h1>The Seven Wonders of the Ancient World</h1>
+    <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+
+    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+      <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="">
+    <h2>Temple of Artemis</h2>
+    <ol>
+      <li>Date of construction:</li>
+      <li>Circa 550 BC</li>
+      <li>Builders:</li>
+      <li>Greeks</li>
+      <li>Location:</li>
+      <li>Selçuk, Turkey</li>
+    </ol>
+
+    </div>
     </div>
 
   </div>
