--- a/index.html
+++ b/index.html
@@ -2,36 +2,82 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Grid Layout</title>
+  <title>The Seven Wonders of the Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="grid">
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
-      <figure>
-        <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
-      </figure>
-    <h1>The Seven Wonders of the Ancient World</h1>
-    <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
 
-    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
-      <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="">
-    <h2>Temple of Artemis</h2>
-    <ol>
-      <li>Date of construction:</li>
-      <li>Circa 550 BC</li>
-      <li>Builders:</li>
-      <li>Greeks</li>
-      <li>Location:</li>
-      <li>Selçuk, Turkey</li>
-    </ol>
-
-    </div>
+    <div class="unit xs-1 s-1 m-1 l-2-3">
+      <img class="img-flex" src="images/pano.jpg" alt="">
     </div>
 
+    <div class="unit xs-1 s-1 m-1 l-1-3">
+      <h1>The Seven Wonders of the Ancient World</h1>
+
+      <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </div>
   </div>
+
+  <div class="grid">
+
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
+      <figure>
+        <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
+        <figcaption>
+          <h2>Temple of Artemis</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 550 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Selçuk, Turkey</dd>
+          </dl>
+        </figcaption>
+      </figure>
+    </div>
+
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
+      <figure>
+        <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
+        <figcaption>
+          <h2>Colossus of Rhodes</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>292–280 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Rhodes, Greece</dd>
+          </dl>
+        </figcaption>
+      </figure>
+    </div>
+
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
+      <figure>
+        <img class="img-flex" src="images/hanging-gardens.jpg" alt="">
+        <figcaption>
+          <h2>Hanging Gardens of Babylon</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 600 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Babylonians</dd>
+            <dt>Location:</dt>
+            <dd>Nineveh, Iraq</dd>
+          </dl>
+        </figcaption>
+      </figure>
+    </div>
+  </div>
+
+</body>
+</html>
